<resources>
    <string name="app_name">DemoBuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings...</string>
    <string name="action_delete_backups">Delete all...</string>
    <string name="menu_home">Home</string>
    <string name="menu_mileage">Home</string>
    <string name="menu_my_data">Customers, Sales, Tickets, etc.</string>
    <string name="menu_users">Users</string>
    <string name="menu_authentication">Login</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_territory_info">By Territory</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="last_week">Last week</string>
    <string name="last_month_and_older">Last month and older</string>
    <string name="menu_home_explicit">Home</string>
    <string name="menu_mileage_explicit">Fucking Mileage</string>
    <string name="menu_data_explicit">Fucking Data</string>
    <string name="menu_stats_explicit">Fucking Stats</string>
    <string name="menu_settings_explicit">Fucking Settings</string>
    <string name="menu_authentication_explicit">Fucking Login</string>
    <string name="menu_other_fucking_sales_shit">My Fucking Territory</string>
    <string name="menu_users_explicit">Other Fuckers</string>
    <string name="action_settings_explicit">Fucking settings...</string>
    <string name="action_update_check">Check for update</string>
    <string name="action_update_check_explicit">Update this shit</string>
    <string name="triplist_today_explicit">Fucking today</string>
    <string name="triplist_yesterday_explicit">Fucking yesterday</string>
    <string name="triplist_this_week_explicit">This fucking week</string>
    <string name="triplist_last_week_explicit">Last fucking week</string>
    <string name="triplist_this_month_explicit">This fucking month</string>
    <string name="triplist_last_month_and_older_explicit">Last month and fucking older</string>
    <string name="tripOptions_view_explicit">Fucking View</string>
    <string name="tripOptions_submit_explicit">Fucking Submit</string>
    <string name="tripOptions_recall_explicit">Fucking Recall</string>
    <string name="tripOptions_edit_explicit">Fucking Edit</string>
    <string name="tripOptions_delete_explicit">Fucking Delete</string>
    <string name="tripOptions_view">View</string>
    <string name="tripOptions_submit">Submit</string>
    <string name="tripOptions_recall">Recall</string>
    <string name="tripOptions_edit">Edit</string>
    <string name="tripOptions_delete">Delete</string>
    <string name="settings_mileage_title_explicit">Mileage shit</string>
    <string name="settings_name_trips_explicit">Name your fucking trips</string>
    <string name="settings_auto_submit_explicit">Auto-fucking-submit trips</string>
    <string name="settings_confirmend_explicit">Confirm you want to fucking stop</string>
    <string name="settings_auto_stop_explicit">Auto-fucking-stop trips</string>
    <string name="settings_auto_stop_interval_explicit">Fucking stop interval</string>
    <string name="settings_receipt_format_explicit">Receipt fucking format</string>
    <string name="settings_permissions_explicit">Fucking permissions</string>
    <string name="settings_users_title">Fucking Users</string>
    <string name="settings_update_me_explicit">Update my-fucking-self</string>
    <string name="settings_update_addresses_explicit">Update fucking addresses</string>
    <string name="settings_update_account_addresses_explicit">Update fucking account addresses</string>
    <string name="settings_database_explicit">The Fucking Database</string>
    <string name="settings_delete_mileage_explicit">Delete all fucking mileage</string>
    <string name="settings_delete_empty_explicit">Delete empty fucking trips</string>
    <string name="settings_other_explicit">Other Shit</string>
    <string name="settings_prompt_opportunities_explicit">Update fucking opportunities</string>
    <string name="settings_delete_local_updates_explicit">Delete local fucking updates</string>
    <string name="settings_check_updates_explicit">Automatically check for fucking updates</string>
    <string name="settings_debug_explicit">Debug mode, bitch</string>
    <string name="settings_explicit_explicit">Naughty words?</string>
    <string name="settings_experimental_menu_explicit">Experimental Shit</string>
    <string name="home_second">Home Second</string>
    <string name="NotificationText">Trip running</string>
    <string name="stop_trip_btn_notification_text">Stop</string>
    <string name="title_activity_view_trip">View Trip</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="google_maps_key">AIzaSyDHaFYs8cUyI1Ta5RtOxhg1pXPAd2W9RBs</string>
    <string name="action_login">Login</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_activitiy__restore_db">Restore</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_restore_db">Restore Database</string>
    <string name="action_update">Check for update</string>
    <string name="title_activity_aggregate_stats">AggregateStats</string>
    <string name="menu_aggregated_mileage_stats">Aggregated Mileage Stats</string>
    <string name="lastest_version">You are running the most recent version</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="logout_explicit">Log the fuck out</string>
    <string name="login_explicit">Log the fuck in</string>
    <string name="stopping_trip">Stopping trip...</string>
    <string name="must_login">You must login</string>
    <string name="loading">Loading...</string>
    <string name="retry">Retry</string>
    <string name="version">"Version "</string>
    <string name="action_permissions">Adjust permissions...</string>
    <string name="receipt_mail_body">MediBuddy generated mileage receipt.</string>
    <string name="receipt_mail_subject_preamble">Mileage Receipt</string>
    <string name="title_activity_numbers">Sales and Goals</string>
    <string name="title_activity__sales_performance">ScrollingActivity</string>
    <string name="menu_sales">Sales and more</string>
    <string name="action_change_date">Choose month...</string>
    <string name="action_last_month">Last month</string>
    <string name="action_this_month">This month</string>
    <string name="action_this_year">This year</string>
    <string name="action_last_year">Last year</string>
    <string name="action_east_region">East region</string>
    <string name="action_west_region">West region</string>
    <string name="title_activity_fullscreen_choose_territory">FullscreenActivity</string>
    <string name="action_choose_territory">Territory...</string>
    <string name="is_edited_explicit">FUCKING EDITED</string>
    <string name="is_edited">EDITED</string>
    <string name="is_manual_explicit">PROBABLY FAKE</string>
    <string name="is_manual">MANUAL TRIP</string>
    <string name="is_autostopped_explicit">FUCKING-STOPPED</string>
    <string name="is_autostopped">AUTO-STOPPED</string>
    <string name="start_marker">Start</string>
    <string name="start_marker_explicit">Fucking start</string>
    <string name="end_marker_explicit">Fucking end</string>
    <string name="end_marker">End</string>
    <string name="select_user">Choose user</string>
    <string name="select_user_explicit">Select fucking user</string>
    <string name="set_defaults">Set defaults</string>
    <string name="set_defaults_explicit">Set fucking defaults</string>
    <string name="action_export_to_excel">Export to Excel...</string>
    <string name="action_export_my_mileage_to_excel">Export to Excel...</string>
    <string name="menu_account_info">By Account</string>
    <string name="action_choose_account">Choose account...</string>
    <string name="action_licensing">Licensing</string>
    <string name="action_cables">Aux cables</string>
    <string name="action_flowmeters">Flowmeters</string>
    <string name="action_probes">Probes</string>
    <string name="action_anystatus">Any</string>
    <string name="action_expired">Expired</string>
    <string name="action_returned">Returned</string>
    <string name="action_instock">In stock</string>
    <string name="product_type_menu_title">Product family</string>
    <string name="status_menu_title">Product status</string>
    <string name="action_lost">Lost</string>
    <string name="search_title">Search</string>
    <string name="menu_salesquotas">Sales Quotas</string>
    <string name="change_case_state">Case state</string>
    <string name="action_case_state_open">Open</string>
    <string name="action_case_state_closed">Closed</string>
    <string name="action_case_status_waiting_on_rep">Waiting on rep</string>
    <string name="change_case_status">Case status</string>
    <string name="action_case_state_in_progress">In progress</string>
    <string name="action_case_status_on_hold">On hold</string>
    <string name="action_case_status_to_be_inspected">To be inspected</string>
    <string name="action_case_status_waiting_for_product">Waiting for product</string>
    <string name="action_case_status_waiting_on_customer">Waiting on customer</string>
    <string name="action_case_status_to_be_billed">To be billed</string>
    <string name="action_case_status_problem_solved">Problem solved</string>
    <string name="action_email">Email...</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="menu_usage">Usage</string>
    <string name="menu_start_new_trip">Start New Trip</string>
    <string name="menu_cpywide_data">Company-Wide</string>
    <string name="action_qualifying">Qualifying</string>
    <string name="action_stalled">Stalled</string>
    <string name="action_discovery">Discovery</string>
    <string name="action_evaluating">Evaluating</string>
    <string name="action_pending">Pending</string>
    <string name="action_won">Won</string>
    <string name="action_closed">Closed</string>
    <string name="action_canceled">Canceled</string>
    <string name="action_dead">Dead</string>
    <string name="action_any">Any</string>
    <string name="change_opportunity_status">Opportunity status...</string>
    <string name="action_last_three_months">Last 3 months</string>
    <string name="action_back">Back</string>
    <string name="action_create_new">Create new...</string>
    <string name="action_delete">Delete</string>
    <string name="action_case_status_any">Any</string>
    <string name="action_surgeons_only">Surgeons only</string>
</resources>