<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_back"
        android:title="@string/action_back"
        android:orderInCategory="0"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_last_three_months"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="98"
        android:title="@string/action_last_three_months"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_this_month"
        android:checkable="true"
        android:orderInCategory="98"
        android:title="@string/action_this_month"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_last_month"
        android:checkable="true"
        android:orderInCategory="99"
        android:title="@string/action_last_month"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_choose_month"
        android:orderInCategory="100"
        android:title="@string/action_change_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_surgeons_only"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="96"
        android:title="@string/action_surgeons_only"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_producttype"
        android:orderInCategory="98"
        android:title="@string/product_type_menu_title">
        <menu>
            <group
                android:id="@+id/ptype"
                android:checkableBehavior="all"
                android:menuCategory="container">
                <item
                    android:id="@+id/action_probes"
                    android:checkable="true"
                    android:checked="true"
                    android:orderInCategory="96"
                    android:title="@string/action_probes"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_flowmeters"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_flowmeters"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_cables"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_cables"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_licensing"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_licensing"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_productstatus"
        android:orderInCategory="99"
        android:title="@string/status_menu_title">
        <menu>
            <group
                android:id="@+id/pstatus"
                android:menuCategory="container">
                <item
                    android:id="@+id/action_instock"
                    android:checkable="true"
                    android:checked="true"
                    android:orderInCategory="96"
                    android:title="@string/action_instock"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_returned"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_returned"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_expired"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_expired"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_lost"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_lost"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_any"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_anystatus"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_export_to_excel"
        android:orderInCategory="100"
        android:title="@string/action_export_to_excel"
        app:showAsAction="never" />

    <!--********************* CASE STUFF *********************-->

    <item
        android:id="@+id/action_case_state"
        android:orderInCategory="98"
        android:title="@string/change_case_state">
        <menu>
            <group
                android:id="@+id/case_state"
                android:menuCategory="container">
                <item
                    android:id="@+id/action_case_state_open"
                    android:checkable="true"
                    android:checked="true"
                    android:orderInCategory="96"
                    android:title="@string/action_case_state_open"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_case_state_closed"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_case_state_closed"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_case_create_new"
        android:checkable="false"
        android:visible="false"
        android:orderInCategory="96"
        android:title="@string/action_create_new"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_case_status"
        android:orderInCategory="98"
        android:numericShortcut="1"
        android:alphabeticShortcut="a"
        android:title="@string/change_case_status">
        <menu>
            <group
                android:id="@+id/case_status"
                android:menuCategory="container">
                <item
                    android:id="@+id/action_case_status_any"
                    android:checkable="true"
                    android:checked="true"
                    android:orderInCategory="96"
                    android:title="@string/action_case_status_any"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_case_status_inprogress"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_case_state_in_progress"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_case_status_on_hold"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_case_status_on_hold"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_case_status_to_be_inspected"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_case_status_to_be_inspected"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_case_status_waiting_for_product"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_case_status_waiting_for_product"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_case_status_waiting_on_customer"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_case_status_waiting_on_customer"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_change_case_status_waiting_on_rep"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_case_status_waiting_on_rep"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_case_status_to_be_billed"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_case_status_to_be_billed"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_case_status_problem_solved"
                    android:checkable="true"
                    android:checked="false"
                    android:orderInCategory="96"
                    android:title="@string/action_case_status_problem_solved"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_opportunity_status"
        android:orderInCategory="98"
        android:title="@string/change_opportunity_status">
        <menu>
            <group
                android:id="@+id/opportunity_status"
                android:menuCategory="container">
                <item
                    android:id="@+id/action_opp_any"
                    android:orderInCategory="100"
                    android:checkable="true"
                    android:title="@string/action_any"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_opp_discovery"
                    android:orderInCategory="99"
                    android:checkable="true"
                    android:title="@string/action_discovery"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_opp_stalled"
                    android:orderInCategory="98"
                    android:checkable="true"
                    android:title="@string/action_stalled"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_opp_qualifying"
                    android:orderInCategory="97"
                    android:checkable="true"
                    android:title="@string/action_qualifying"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_opp_evaluating"
                    android:orderInCategory="96"
                    android:checkable="true"
                    android:title="@string/action_evaluating"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_opp_pending"
                    android:orderInCategory="95"
                    android:checkable="true"
                    android:title="@string/action_pending"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_opp_won"
                    android:orderInCategory="94"
                    android:checkable="true"
                    android:title="@string/action_won"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_opp_closed"
                    android:orderInCategory="93"
                    android:checkable="true"
                    android:title="@string/action_closed"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_opp_canceled"
                    android:orderInCategory="92"
                    android:checkable="true"
                    android:title="@string/action_canceled"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_opp_dead"
                    android:orderInCategory="91"
                    android:checkable="true"
                    android:title="@string/action_dead"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <!-- SERVICE AGREEMENTS -->
    <!--<item
        android:id="@+id/action_current_service_agreements"
        android:orderInCategory="100"
        android:checkable="true"
        android:title="@string/action_current_service_agreements"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_expiring_service_agreements"
        android:orderInCategory="99"
        android:checkable="true"
        android:title="@string/action_expiring_service_agreements"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_expired_service_agreements"
        android:orderInCategory="98"
        android:checkable="true"
        android:title="@string/action_expired_service_agreements"
        app:showAsAction="never" />-->


</menu>