<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:menuCategory="container" android:id="@+id/top">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house_icon_black_36x"
            android:title="@string/menu_mileage" />
    </group>

    <group android:checkableBehavior="single"
        android:menuCategory="container" android:id="@+id/bottom">

        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/house_icon_black_36x"
            android:title="@string/menu_data">
            <menu>
                <item
                    android:id="@+id/nav_aggregatedmileagestats"
                    android:icon="@drawable/ic_carot_right"
                    android:title="@string/menu_aggregated_mileage_stats" />
                <item
                    android:id="@+id/nav_myterritory"
                    android:icon="@drawable/ic_carot_right"
                    android:title="@string/menu_territory_info" />
                <item
                    android:id="@+id/nav_myaccounts"
                    android:icon="@drawable/ic_carot_right"
                    android:title="@string/menu_account_info" />
                <item
                    android:id="@+id/nav_salesquotas"
                    android:icon="@drawable/ic_carot_right"
                    android:title="@string/menu_salesquotas" />
                <item
                    android:id="@+id/nav_usage"
                    android:icon="@drawable/ic_carot_right"
                    android:visible="false"
                    android:title="@string/menu_usage" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings_36x36"
                    android:title="Settings" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_user_trips"
            android:icon="@drawable/settings_36x36"
            android:menuCategory="container"
            android:enabled="true"
            android:title="Users">

            <menu>
                <item
                    android:id="@+id/menu_loadingUsers"
                    android:title="Loading..."/>
            </menu>

        </item>
    </group>
</menu>
